--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     </head>
     <body>
         <main>
-            <img src="img/home.png" usemap="#workmap" width="1024" height="724">
+            <nav>
+                <img src="img/home.png" usemap="#workmap" width="1024" height="724">
+            </nav>
+            
             <hr>
             <h2>
                 click to browse
@@ -17,16 +20,16 @@
         <footer>
             <p>
                 massachusetts punk flyers dot neocities<br>
-                what rights reserved
+                what rights reserved?
             </p>
         </footer>
     </body>
     <map name="workmap">
-        <area shape="rect" coords="61,49,332,174" alt="Western Mass" href="WESTMA.htm">
-        <area shape="rect" coords="440,146,623,263" alt="Boston Area" href="BOSTON.htm">
-        <area shape="rect" coords="707,17,855,161" alt="North Shore" href="NORTH.htm">
-        <area shape="rect" coords="228,343,447,480" alt="Central Mass" href="CENTRAL.htm">
-        <area shape="rect" coords="559,365,743,512" alt="South Shore" href="SOUTH.htm">
-        <area shape="rect" coords="600,536,916,683" alt="And More" href="MORE.htm">
+        <area shape="rect" coords="61,49,332,174" alt="Western Mass" href="WESTMA.html">
+        <area shape="rect" coords="440,146,623,263" alt="Boston Area" href="BOSTON.html">
+        <area shape="rect" coords="707,17,855,161" alt="North Shore" href="NORTH.html">
+        <area shape="rect" coords="228,343,447,480" alt="Central Mass" href="CENTRAL.html">
+        <area shape="rect" coords="559,365,743,512" alt="South Shore" href="SOUTH.html">
+        <area shape="rect" coords="600,536,916,683" alt="And More" href="MORE.html">
     </map>
 </html>
