--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </footer>
     </body>
     <map name="workmap">
-        <area shape="rect" coords="61,49,332,174" alt="Western Mass" href="WESTMA.html">
+        <area shape="rect" coords="61,49,332,174" alt="Western Mass" href="WEST.html">
         <area shape="rect" coords="440,146,623,263" alt="Boston Area" href="BOSTON.html">
         <area shape="rect" coords="707,17,855,161" alt="North Shore" href="NORTH.html">
         <area shape="rect" coords="228,343,447,480" alt="Central Mass" href="CENTRAL.html">
