--- a/north.html
+++ b/north.html
@@ -14,7 +14,7 @@
                 </a>
             </nav>
             <h2>
-                MORE
+                NORTH
             </h2>
             <div class="stuff">
                 <div class="thing">
