--- a/central.html
+++ b/central.html
@@ -14,7 +14,7 @@
                 </a>
             </nav>
             <h2>
-                MORE
+                Central
             </h2>
             <div class="stuff">
                 <div class="thing">
