--- a/south.html
+++ b/south.html
@@ -14,7 +14,7 @@
                 </a>
             </nav>
             <h2>
-                MORE
+                SOUTH
             </h2>
             <div class="stuff">
                 <div class="thing">
