--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         </footer>
     </body>
     <map name="workmap">
-        <area shape="rect" coords="61,49,332,174" alt="Western Mass" href="WEST.html">
-        <area shape="rect" coords="440,146,623,263" alt="Boston Area" href="BOSTON.html">
-        <area shape="rect" coords="707,17,855,161" alt="North Shore" href="NORTH.html">
-        <area shape="rect" coords="228,343,447,480" alt="Central Mass" href="CENTRAL.html">
-        <area shape="rect" coords="559,365,743,512" alt="South Shore" href="SOUTH.html">
-        <area shape="rect" coords="600,536,916,683" alt="And More" href="MORE.html">
+        <area shape="rect" coords="61,49,332,174" alt="Western Mass" href="west.html">
+        <area shape="rect" coords="440,146,623,263" alt="Boston Area" href="boston.html">
+        <area shape="rect" coords="707,17,855,161" alt="North Shore" href="north.html">
+        <area shape="rect" coords="228,343,447,480" alt="Central Mass" href="central.html">
+        <area shape="rect" coords="559,365,743,512" alt="South Shore" href="south.html">
+        <area shape="rect" coords="600,536,916,683" alt="And More" href="more.html">
     </map>
 </html>
